out/production/harrisa03/console.txt
C:\Users\Alex\IdeaProjects\UWJavaQ1>javac harrisa03\src\Library*.java -verbose
[parsing started RegularFileObject[harrisa03\src\Library.java]]
[parsing completed 31ms]
[parsing started RegularFileObject[harrisa03\src\LibraryTest.java]]
[parsing completed 2ms]
[search path for source files: .,C:\Program Files (x86)\QuickTime\QTSystem\QTJav
a.zip]
[search path for class files: C:\Program Files\Java\jdk1.7.0_40\jre\lib\resource
s.jar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\rt.jar,C:\Program Files\Java\jdk
1.7.0_40\jre\lib\sunrsasign.jar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\jsse.j
ar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\jce.jar,C:\Program Files\Java\jdk1.
7.0_40\jre\lib\charsets.jar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\jfr.jar,C:
\Program Files\Java\jdk1.7.0_40\jre\classes,C:\Program Files\Java\jdk1.7.0_40\jr
e\lib\ext\access-bridge-64.jar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\ext\dns
ns.jar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\ext\jaccess.jar,C:\Program File
s\Java\jdk1.7.0_40\jre\lib\ext\localedata.jar,C:\Program Files\Java\jdk1.7.0_40\
jre\lib\ext\sunec.jar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\ext\sunjce_provi
der.jar,C:\Program Files\Java\jdk1.7.0_40\jre\lib\ext\sunmscapi.jar,C:\Program F
iles\Java\jdk1.7.0_40\jre\lib\ext\zipfs.jar,.,C:\Program Files (x86)\QuickTime\Q
TSystem\QTJava.zip]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/HashMap.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/ArrayList.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/lang/Object.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/lang/String.class)]]
harrisa03\src\LibraryTest.java:1: error: package org.junit does not exist
import org.junit.Test;
                ^
harrisa03\src\LibraryTest.java:10: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class LibraryTest
[checking Library]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/lang/AutoCloseable.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/AbstractList.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/AbstractCollection.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/Map.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/AbstractMap.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/Collection.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/lang/System.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/io/PrintStream.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/io/FilterOutputStream.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/io/OutputStream.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/util/Set.class)]]
[loading ZipFileIndexFileObject[C:\Program Files\Java\jdk1.7.0_40\lib\ct.sym(MET
A-INF/sym/rt.jar/java/lang/Iterable.class)]]
[checking LibraryTest]
[total 625ms]
2 errors

The compile failed because the compiler doesn't know where to find the org.junit package which contains the Test class.